# la-stack

./: .codacy.yml  .codecov.yml  .coderabbit.yaml  .gitattributes  .gitignore  .markdownlint.json  .taplo.toml  .yamllint  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REFERENCES.md  SECURITY.md  WARP.md  cliff.toml  clippy.toml  cspell.json  dprint.json  justfile  pyproject.toml  rust-toolchain.toml  rustfmt.toml  semgrep.yaml  ty.toml  typos.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  codacy.yml  codecov.yml  codeql.yml  release-benchmarks.yml  rust-clippy.yml  semgrep-sarif.yml  zizmor.yml
benches/: exact.rs  vs_linalg.rs  vs_nalgebra.rs
benches/common/: bench_utils.rs  exact.rs  vs_linalg.rs
docs/: BENCHMARKING.md  COVERAGE.md  PERFORMANCE.md  RELEASING.md  mathematical_basis.md  roadmap.md
docs/archive/changelog/: 0.1.md  0.2.md  0.3.md
docs/archive/performance/: README.md  v0.4.1-vs-v0.4.0.md  v0.4.2-vs-v0.4.1.md
docs/assets/bench/: vs_linalg_lu_solve_median.csv  vs_linalg_lu_solve_median.provenance.json  vs_nalgebra_lu_solve_median.csv
examples/: const_det_4x4.rs  det_3x3.rs  det_5x5.rs  exact_det_3x3.rs  exact_sign_3x3.rs  exact_solve_3x3.rs  ldlt_solve_3x3.rs  solve_3x3.rs  solve_5x5.rs
scripts/: README.md  archive_changelog.py  archive_performance.py  bench_compare.py  check_docs_version_sync.py  check_semgrep_fixtures.py  criterion_dim_plot.py  postprocess_changelog.py  subprocess_utils.py  tag_release.py
scripts/tests/: __init__.py  test_archive_changelog.py  test_archive_performance.py  test_bench_compare.py  test_check_docs_version_sync.py  test_check_semgrep_fixtures.py  test_criterion_dim_plot.py  test_postprocess_changelog.py  test_subprocess_utils.py  test_tag_release.py
src/: cspell.json  error.rs  exact.rs  ldlt.rs  lib.rs  lu.rs  matrix.rs  scaled_product.rs  tolerance.rs  vector.rs
tests/: exact_bench_config.rs  exact_conversion_boundaries.rs  prelude_exports.rs  proptest_exact.rs  proptest_factorizations.rs  proptest_matrix.proptest-regressions  proptest_matrix.rs  proptest_vector.rs  regressions.rs  scaled_product_determinants.rs  vs_linalg_inputs.rs
tests/semgrep/.github/workflows/: action_policy.yml
tests/semgrep/docs/: public_examples.md
tests/semgrep/doctests/: unwrap_expect.txt
tests/semgrep/scripts/tests/: python_exceptions.py
tests/semgrep/src/project_rules/: bench_example_usage.rs  finite_api_contract.rs  portable_policy.rs  public_api_panic_paths.rs  raw_f64_constructors.rs  readme_doctest_mirrors.rs
