[package]
name = "la-stack"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
license = "BSD-3-Clause"
description = "Small, stack-allocated linear algebra for fixed dimensions"
readme = "README.md"
documentation = "https://docs.rs/la-stack"
repository = "https://github.com/acgetchell/la-stack"
homepage = "https://github.com/acgetchell/la-stack"
categories = [ "mathematics", "science" ]
keywords = [ "linear-algebra", "geometry", "const-generics" ]

[dependencies]
# Intentionally empty (bench-only deps are optional features below)
criterion = { version = "0.8.2", features = [ "html_reports" ], optional = true }
faer = { version = "0.24.0", default-features = false, features = [ "std", "linalg" ], optional = true }
nalgebra = { version = "0.34.1", optional = true }
num-bigint = { version = "0.4", optional = true }
num-rational = { version = "0.4", features = [ "num-bigint-std" ], optional = true }

[dev-dependencies]
approx = "0.5.1"
pastey = "0.2.1"
proptest = "1.10.0"

[features]
default = [  ]
bench = [ "criterion", "faer", "nalgebra" ]
exact = [ "num-bigint", "num-rational" ]

[[bench]]
name = "vs_linalg"
harness = false
required-features = [ "bench" ]

[profile.release]
lto = "fat"
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
dead_code = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
