[package]
name = "la-stack"
version = "0.2.2"
edition = "2024"
rust-version = "1.94"
license = "BSD-3-Clause"
description = "Small, stack-allocated linear algebra for fixed dimensions"
readme = "README.md"
documentation = "https://docs.rs/la-stack"
repository = "https://github.com/acgetchell/la-stack"
homepage = "https://github.com/acgetchell/la-stack"
categories = [ "mathematics", "science" ]
keywords = [ "linear-algebra", "geometry", "const-generics" ]

[dependencies]
# All runtime deps are optional; see [features] below.
criterion = { version = "0.8.2", features = [ "html_reports" ], optional = true }
faer = { version = "0.24.0", default-features = false, features = [ "std", "linalg" ], optional = true }
nalgebra = { version = "0.34.1", optional = true }
num-bigint = { version = "0.4.6", optional = true }
num-rational = { version = "0.4.2", features = [ "num-bigint-std" ], optional = true }
num-traits = { version = "0.2.19", optional = true }

[dev-dependencies]
approx = "0.5.1"
pastey = "0.2.1"
proptest = "1.10.0"

[features]
default = [  ]
bench = [ "criterion", "faer", "nalgebra" ]
exact = [ "num-bigint", "num-rational", "num-traits" ]

[[example]]
name = "exact_det_3x3"
required-features = [ "exact" ]

[[example]]
name = "exact_sign_3x3"
required-features = [ "exact" ]

[[bench]]
name = "vs_linalg"
harness = false
required-features = [ "bench" ]

[profile.release]
lto = "fat"
codegen-units = 1

[package.metadata.docs.rs]
features = [ "exact" ]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
dead_code = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
