[build-system]
requires = [ "setuptools>=65.0.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "la-stack-scripts"
version = "0.4.3"
description = "Python utility scripts for the la-stack Rust library"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Adam Getchell", email = "adam@adamgetchell.org" },
]
keywords = [ "linear-algebra", "benchmarking", "utilities", "la-stack" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: System :: Benchmarking",
]

# No runtime dependencies currently; scripts rely on the standard library.
dependencies = [  ]

[project.urls]
"Homepage" = "https://github.com/acgetchell/la-stack"
"Documentation" = "https://docs.rs/la-stack"
"Repository" = "https://github.com/acgetchell/la-stack"
"Bug Tracker" = "https://github.com/acgetchell/la-stack/issues"

[project.scripts]
archive-changelog = "archive_changelog:main"
archive-performance = "archive_performance:main"
bench-compare = "bench_compare:main"
criterion-dim-plot = "criterion_dim_plot:main"
postprocess-changelog = "postprocess_changelog:main"
tag-release = "tag_release:main"
check-docs-version-sync = "check_docs_version_sync:main"

# Configure setuptools to find modules in scripts/ directory.
[tool.setuptools]
package-dir = { "" = "scripts" }
py-modules = [ "archive_changelog", "archive_performance", "bench_compare", "check_docs_version_sync", "check_semgrep_fixtures", "criterion_dim_plot", "postprocess_changelog", "subprocess_utils", "tag_release" ]

[tool.ruff]
line-length = 160
target-version = "py313"
src = [ "scripts" ]

[tool.ruff.lint]
select = [ "E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF" ]
fixable = [ "ALL" ]
unfixable = [  ]
ignore = [
    # Formatter conflicts
    "COM812", # Trailing comma missing (conflicts with formatter)
    "ISC001", # Implicitly concatenated string literals (conflicts with formatter)

    # CLI script patterns
    "PLR2004", # Magic value used in comparison - OK for CLI constants and thresholds
    "FBT001", # Boolean-typed positional argument - OK for CLI flags
    "FBT002", # Boolean default positional argument - OK for CLI flags
    "BLE001", # Do not catch blind exception - OK for CLI robustness
    "T201", # print found - OK for CLI output
    "TRY300", # Consider moving statement to else block - OK for CLI control flow
    "TRY301", # Abstract raise to inner function - OK for straightforward CLI error handling
    "ARG001", # Unused function argument - common in callbacks
    "ERA001", # Found commented-out code - OK for explanatory comments
    "EXE001", # Shebang present but file not executable - handled by packaging
    "PTH123", # open() should be replaced by Path.open() - OK for some call sites
    "EM102", # Exception must not use f-string - OK for CLI error messages
    "TRY003", # Avoid specifying long messages outside exception class - OK for CLI reporting
]

[tool.ruff.lint.per-file-ignores]
"scripts/tests/**/*.py" = [
    "S101", # asserts are fine in tests
    "SLF001", # tests may call internal helpers
    "PT019", # @patch decorator params are not pytest fixtures
    "PLC0415", # test helpers may import inside functions
]

[tool.ruff.lint.isort]
known-first-party = [
    "archive_changelog",
    "archive_performance",
    "bench_compare",
    "check_semgrep_fixtures",
    "criterion_dim_plot",
    "postprocess_changelog",
    "subprocess_utils",
    "tag_release",
]
force-single-line = false
split-on-trailing-comma = true
combine-as-imports = true
order-by-type = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [ "-ra", "--strict-markers", "--strict-config", "--color=yes" ]
testpaths = [ "scripts/tests" ]
python_files = [ "test_*.py", "*_test.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "actionlint-py==1.7.12.24",
    "pytest==9.0.3",
    "ruff>=0.15.14",
    "semgrep==1.164.0",
    "ty>=0.0.40",
]
